Debugging merge_on_frequency

--- a/nbs/01c_sitarweb.ipynb
+++ b/nbs/01c_sitarweb.ipynb
@@ -124,7 +124,7 @@
     "\t\traise NotImplementedError(\"Subclasses devem implementar a propriedade 'query'\")\n",
     "\n",
     "\tdef extraction(self):\n",
-    "\t\treturn pd.read_sql_query(self.query, self.connect(), dtype='string')\n"
+    "\t\treturn pd.read_sql_query(self.query, self.connect(), dtype='category')\n"
    ]
   },
   {
@@ -161,7 +161,7 @@
     "\t\tdf['Fonte'] = 'SRD'\n",
     "\t\tdf['Multiplicidade'] = '1'\n",
     "\t\ta = df.Situação.isna()\n",
-    "\t\tdf.loc[a, 'Classe'] = df.loc[a, 'Fase']\n",
+    "\t\tdf.loc[a, 'Classe'] = df.loc[a, 'Fase'].astype('string')\n",
     "\t\tdf.loc[~a, 'Classe'] = (\n",
     "\t\t\tdf.loc[~a, 'Fase'].astype('string') + '-' + df.loc[~a, 'Situação'].astype('string')\n",
     "\t\t)\n",
@@ -205,6 +205,7 @@
     "\t\tdf['Status'] = 'L'\n",
     "\t\tdf['Entidade'] = df.Entidade.str.strip()\n",
     "\t\tdf['Fonte'] = 'STEL'\n",
+    "\t\tdf['Largura_Emissão'] = df['Largura_Emissão'].astype('string')\n",
     "\t\tdf.loc[:, ['Largura_Emissão(kHz)', '_']] = (\n",
     "\t\t\tdf.Largura_Emissão.fillna('').apply(self.parse_bw).tolist()\n",
     "\t\t)\n",
