:rocket: Nova versão totalmente refatorada com SMP/Log/Validação

--- a/nbs/01b_base.ipynb
+++ b/nbs/01b_base.ipynb
@@ -156,11 +156,12 @@
     "\t\tif row_filter is None:\n",
     "\t\t\trow_filter = pd.Series(True, index=df.index)\n",
     "\n",
-    "\t\tdf['Log'] = df['Log'].astype('string')\n",
+    "\t\tdf['Log'] = df['Log'].astype('string').fillna('')\n",
     "\n",
     "\t\tdf.loc[row_filter, 'Log'] = df.loc[row_filter, 'Log'].apply(\n",
     "\t\t\tlambda x: log if not x else x + '|' + log\n",
     "\t\t)\n",
+    "\t\tdf['Log'] = df.Log.str.replace(r'[\\n\\t]', '', regex=True)\n",
     "\t\treturn df\n",
     "\n",
     "\t@property\n",
