--- a/nbs/01e_srd.ipynb
+++ b/nbs/01e_srd.ipynb
@@ -98,7 +98,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "MONGO_URI = os.environ.get('MONGO_URI')\n"
+    "MONGO_URI = os.environ.get('MONGO_URI', '')\n"
    ]
   },
   {
@@ -189,6 +189,13 @@
     "\t\t\tdf['Potência_Transmissor(W)']\n",
     "\t\t\t.apply(lambda x: float(Decimal(1000) * Decimal(x)))\n",
     "\t\t\t.astype(float)\n",
+    "\t\t)\n",
+    "\t\tdf.loc[:, ['Id', 'Status']] = df.loc[:, ['Id', 'Status']].astype('string')\n",
+    "\t\tdf['Relatório_Canal'] = (\n",
+    "\t\t\t'http://sistemas.anatel.gov.br/se/eApp/reports/b/srd/resumo_sistema.php?id='\n",
+    "\t\t\t+ df['Id']\n",
+    "\t\t\t+ '&state='\n",
+    "\t\t\t+ df['Status']\n",
     "\t\t)\n",
     "\t\t# self.append2discarded([self.discarded, discarded, discarded_with_na])\n",
     "\t\treturn df.loc[:, self.columns]\n"
@@ -707,33 +714,7 @@
    ],
    "source": [
     "#|export\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "\timport time\n",
-    "\n",
-    "\tstart = time.perf_counter()\n",
-    "\n",
-    "\tdata = SRD()\n",
-    "\n",
-    "\tdata.update()\n",
-    "\n",
-    "\tprint('DATA')\n",
-    "\n",
-    "\tdisplay(data.df)\n",
-    "\n",
-    "\tprint(150 * '=')\n",
-    "\n",
-    "\tprint('DISCARDED!')\n",
-    "\n",
-    "\tdisplay(data.discarded[['Frequência', 'Entidade', 'Log']])\n",
-    "\n",
-    "\tprint(150 * '=')\n",
-    "\n",
-    "\tprint(data.df.Multiplicidade.sum())\n",
-    "\n",
-    "\tdata.save()\n",
-    "\n",
-    "\tprint(f'Elapsed time: {time.perf_counter() - start} seconds')"
+    "\n"
    ]
   },
   {
