--- a/nbs/00_constants.ipynb
+++ b/nbs/00_constants.ipynb
@@ -109,6 +109,8 @@
     "\t'Atenuação_Linha(db/100m)',\n",
     "\t'Perdas_Acessórias_Linha(db)',\n",
     "\t'Padrão_Antena(dBd)',\n",
+    "\t'Comprimento_Linha(m)',\n",
+    "\t'Relatório_Canal',\n",
     "]\n",
     "\n",
     "# COLS_LICENCIAMENTO = [\n",
@@ -279,6 +281,7 @@
     "}\n",
     "\n",
     "DICT_SRD = {\n",
+    "\t'_id': 'Id',\n",
     "\t'frequency': 'Frequência',\n",
     "\t'licensee': 'Entidade',\n",
     "\t'NumFistel': 'Fistel',\n",
@@ -301,10 +304,12 @@
     "\t'MedOrientNV': 'Azimute_Antena',\n",
     "\t'MedHCI': 'Altura_Antena(m)',\n",
     "\t'MedAtenLinhaTransmissaodB100m': 'Atenuação_Linha(db/100m)',\n",
+    "\t'MedComprimento': 'Comprimento_Linha(m)',\n",
     "\t'PerdasAcessorias_db': 'Perdas_Acessórias_Linha(db)',\n",
     "}\n",
     "\n",
     "PROJECTION_SRD = {\n",
+    "\t'_id': 1.0,\n",
     "\t'frequency': 1.0,\n",
     "\t'licensee': 1.0,\n",
     "\t'NumFistel': 1.0,\n",
@@ -328,6 +333,7 @@
     "\t'IndPolariz': '$antena.principal.IndPolariz',\n",
     "\t'MedHCI': '$antena.principal.MedHCI',\n",
     "\t'MedAtenLinhaTransmissaodB100m': '$linhatransmissao.principal.MedAtenLinhaTransmissaodB100m',\n",
+    "\t'MedComprimento': '$linhatransmissao.principal.MedComprimento',\n",
     "\t'PerdasAcessorias_db': '$linhatransmissao.principal.PerdasAcessorias_db',\n",
     "}\n",
     "\n",
@@ -553,7 +559,7 @@
    "source": [
     "#|export\n",
     "REGEX_ESTADOS = f'({\"|\".join(ESTADOS)})'\n",
-    "RE_BW = re.compile('^(\\d{1,3})([HKMG])(\\d{0,2})(\\w{0,3})')"
+    "RE_BW = re.compile(r'^(\\d{1,3})([HKMG])(\\d{0,2})(\\w{0,3})')"
    ]
   },
   {
