--- a/nbs/01c_sitarweb.ipynb
+++ b/nbs/01c_sitarweb.ipynb
@@ -49,9 +49,9 @@
     "from fastcore.foundation import GetAttr\n",
     "\n",
     "from extracao.constants import (\n",
-    "\tCOLUNAS,\n",
-    "\tSQL_RADCOM,\n",
-    "\tSQL_STEL,\n",
+    "    COLUNAS,\n",
+    "    SQL_RADCOM,\n",
+    "    SQL_STEL,\n",
     ")\n",
     "from extracao.datasources.base import Base\n",
     "from extracao.datasources.connectors import SQLServer"
@@ -99,32 +99,32 @@
     "#| export\n",
     "\n",
     "SQLSERVER_PARAMS = dict(\n",
-    "\tdriver='{ODBC Driver 17 for SQL Server}',\n",
-    "\tserver='ANATELBDRO05',\n",
-    "\tdatabase='SITARWEB',\n",
-    "\ttrusted_conn=True,\n",
-    "\tmult_results=True,\n",
-    "\tencrypt=False,\n",
-    "\tusername=os.environ.get('USERNAME'),\n",
-    "\tpassword=os.environ.get('PASSWORD'),\n",
-    "\ttimeout=1000,\n",
+    "    driver=\"{ODBC Driver 17 for SQL Server}\",\n",
+    "    server=\"ANATELBDRO05\",\n",
+    "    database=\"SITARWEB\",\n",
+    "    trusted_conn=True,\n",
+    "    mult_results=True,\n",
+    "    encrypt=False,\n",
+    "    username=os.environ.get(\"USERNAME\"),\n",
+    "    password=os.environ.get(\"PASSWORD\"),\n",
+    "    timeout=1000,\n",
     ")\n",
     "\n",
     "\n",
     "class Sitarweb(Base, GetAttr):\n",
-    "\tdef __init__(self, sql_params: dict = SQLSERVER_PARAMS):\n",
-    "\t\tself.default = SQLServer(sql_params)\n",
+    "    def __init__(self, sql_params: dict = SQLSERVER_PARAMS):\n",
+    "        self.default = SQLServer(sql_params)\n",
     "\n",
-    "\t@property\n",
-    "\tdef columns(self):\n",
-    "\t\treturn COLUNAS\n",
+    "    @property\n",
+    "    def columns(self):\n",
+    "        return COLUNAS\n",
     "\n",
-    "\t@property\n",
-    "\tdef query(self):\n",
-    "\t\traise NotImplementedError(\"Subclasses devem implementar a propriedade 'query'\")\n",
+    "    @property\n",
+    "    def query(self):\n",
+    "        raise NotImplementedError(\"Subclasses devem implementar a propriedade 'query'\")\n",
     "\n",
-    "\tdef extraction(self):\n",
-    "\t\treturn pd.read_sql_query(self.query, self.connect(), dtype='string')\n"
+    "    def extraction(self):\n",
+    "        return pd.read_sql_query(self.query, self.connect(), dtype=\"string\")"
    ]
   },
   {
@@ -136,45 +136,49 @@
     "#| export\n",
     "\n",
     "class Radcom(Sitarweb):\n",
-    "\tdef __init__(self, sql_params: dict = SQLSERVER_PARAMS):\n",
-    "\t\tsuper().__init__(sql_params)\n",
+    "    def __init__(self, sql_params: dict = SQLSERVER_PARAMS):\n",
+    "        super().__init__(sql_params)\n",
     "\n",
-    "\t@property\n",
-    "\tdef query(self):\n",
-    "\t\treturn SQL_RADCOM\n",
+    "    @property\n",
+    "    def query(self):\n",
+    "        return SQL_RADCOM\n",
     "\n",
-    "\t@property\n",
-    "\tdef stem(self):\n",
-    "\t\treturn 'radcom'\n",
+    "    @property\n",
+    "    def stem(self):\n",
+    "        return \"radcom\"\n",
     "\n",
-    "\tdef _format(\n",
-    "\t\tself,\n",
-    "\t\tdf: pd.DataFrame,  # DataFrame com o resultantes do banco de dados\n",
-    "\t) -> pd.DataFrame:  # DataFrame formatado\n",
-    "\t\t\"\"\"Formata, limpa e padroniza os dados provenientes da query no banco\"\"\"\n",
-    "\t\tdf['Entidade'] = df['Entidade'].str.strip()\n",
-    "\t\tdf['Num_Serviço'] = '231'\n",
-    "\t\tdf['Classe_Emissão'] = pd.NA\n",
-    "\t\tdf['Largura_Emissão(kHz)'] = '256'\n",
-    "\t\tdf['Validade_RF'] = pd.NA\n",
-    "\t\tdf['Status'] = 'RADCOM'\n",
-    "\t\tdf['Fonte'] = 'SRD'\n",
-    "\t\tdf['Multiplicidade'] = '1'\n",
-    "\t\ta = df.Situação.isna()\n",
-    "\t\tdf.loc[a, 'Classe'] = df.loc[a, 'Fase']\n",
-    "\t\tdf.loc[~a, 'Classe'] = (\n",
-    "\t\t\tdf.loc[~a, 'Fase'].astype('string') + '-' + df.loc[~a, 'Situação'].astype('string')\n",
-    "\t\t)\n",
-    "\t\tdf.drop(['Fase', 'Situação'], axis=1, inplace=True)\n",
-    "\t\tdf['Log'] = ''\n",
-    "\t\tdf['Frequência'] = pd.to_numeric(df['Frequência'], errors='coerce').astype('float')\n",
-    "\t\tdiscarded = df[df.Frequência.isna()].copy()\n",
-    "\t\tif not discarded.empty:\n",
-    "\t\t\tlog = f\"\"\"[(\"Colunas\", \"Frequência\"),  \n",
+    "    def _format(\n",
+    "        self,\n",
+    "        df: pd.DataFrame,  # DataFrame com o resultantes do banco de dados\n",
+    "    ) -> pd.DataFrame:  # DataFrame formatado\n",
+    "        \"\"\"Formata, limpa e padroniza os dados provenientes da query no banco\"\"\"\n",
+    "        df[\"Entidade\"] = df[\"Entidade\"].str.strip()\n",
+    "        df[\"Num_Serviço\"] = \"231\"\n",
+    "        df[\"Classe_Emissão\"] = pd.NA\n",
+    "        df[\"Largura_Emissão(kHz)\"] = \"256\"\n",
+    "        df[\"Validade_RF\"] = pd.NA\n",
+    "        df[\"Status\"] = \"RADCOM\"\n",
+    "        df[\"Fonte\"] = \"SRD\"\n",
+    "        df[\"Multiplicidade\"] = \"1\"\n",
+    "        a = df.Situação.isna()\n",
+    "        df.loc[a, \"Classe\"] = df.loc[a, \"Fase\"]\n",
+    "        df.loc[~a, \"Classe\"] = (\n",
+    "            df.loc[~a, \"Fase\"].astype(\"string\")\n",
+    "            + \"-\"\n",
+    "            + df.loc[~a, \"Situação\"].astype(\"string\")\n",
+    "        )\n",
+    "        df.drop([\"Fase\", \"Situação\"], axis=1, inplace=True)\n",
+    "        df[\"Log\"] = \"\"\n",
+    "        df[\"Frequência\"] = pd.to_numeric(df[\"Frequência\"], errors=\"coerce\").astype(\n",
+    "            \"float\"\n",
+    "        )\n",
+    "        discarded = df[df.Frequência.isna()].copy()\n",
+    "        if not discarded.empty:\n",
+    "            log = f\"\"\"[(\"Colunas\", \"Frequência\"),  \n",
     "            (\"Processamento\", \"Valor Nulo\")]\"\"\"\n",
-    "\t\t\tself.append2discarded(self.register_log(discarded, log))\n",
-    "\t\tdf.dropna(subset=['Frequência'], inplace=True)\n",
-    "\t\treturn df.loc[:, self.columns]\n"
+    "            self.append2discarded(self.register_log(discarded, log))\n",
+    "        df.dropna(subset=[\"Frequência\"], inplace=True)\n",
+    "        return df.loc[:, self.columns]"
    ]
   },
   {
@@ -186,41 +190,41 @@
     "#| export\n",
     "\n",
     "class Stel(Sitarweb):\n",
-    "\tdef __init__(self, sql_params: dict = SQLSERVER_PARAMS):\n",
-    "\t\tsuper().__init__(sql_params)\n",
+    "    def __init__(self, sql_params: dict = SQLSERVER_PARAMS):\n",
+    "        super().__init__(sql_params)\n",
     "\n",
-    "\t@property\n",
-    "\tdef query(self):\n",
-    "\t\treturn SQL_STEL\n",
+    "    @property\n",
+    "    def query(self):\n",
+    "        return SQL_STEL\n",
     "\n",
-    "\t@property\n",
-    "\tdef stem(self):\n",
-    "\t\treturn 'stel'\n",
+    "    @property\n",
+    "    def stem(self):\n",
+    "        return \"stel\"\n",
     "\n",
-    "\tdef _format(\n",
-    "\t\tself,\n",
-    "\t\tdf: pd.DataFrame,  # DataFrame com o resultantes do banco de dados\n",
-    "\t) -> pd.DataFrame:  # DataFrame formatado\n",
-    "\t\t\"\"\"Formata, limpa e padroniza os dados provenientes da query no banco\"\"\"\n",
-    "\t\tdf['Status'] = 'L'\n",
-    "\t\tdf['Entidade'] = df.Entidade.str.strip()\n",
-    "\t\tdf['Fonte'] = 'STEL'\n",
-    "\t\tdf.loc[:, ['Largura_Emissão(kHz)', '_']] = (\n",
-    "\t\t\tdf.Largura_Emissão.fillna('').apply(self.parse_bw).tolist()\n",
-    "\t\t)\n",
-    "\t\tdf.drop(['Largura_Emissão', '_'], axis=1, inplace=True)\n",
-    "\t\tdf.loc[:, 'Validade_RF'] = df.Validade_RF.astype('string').str.slice(0, 10)\n",
-    "\t\tdf['Frequência'] = df['Frequência'].astype('float')\n",
-    "\t\tdf.loc[df.Unidade == 'kHz', 'Frequência'] = df.loc[df.Unidade == 'kHz', 'Frequência'].apply(\n",
-    "\t\t\tlambda x: float(Decimal(x) / Decimal(1000))\n",
-    "\t\t)\n",
-    "\t\tdf.loc[df.Unidade == 'GHz', 'Frequência'] = df.loc[df.Unidade == 'GHz', 'Frequência'].apply(\n",
-    "\t\t\tlambda x: float(Decimal(x) * Decimal(1000))\n",
-    "\t\t)\n",
-    "\t\tdf.drop('Unidade', axis=1, inplace=True)\n",
-    "\t\tdf['Multiplicidade'] = 1\n",
-    "\t\tdf['Log'] = ''\n",
-    "\t\treturn df.loc[:, self.columns]\n"
+    "    def _format(\n",
+    "        self,\n",
+    "        df: pd.DataFrame,  # DataFrame com o resultantes do banco de dados\n",
+    "    ) -> pd.DataFrame:  # DataFrame formatado\n",
+    "        \"\"\"Formata, limpa e padroniza os dados provenientes da query no banco\"\"\"\n",
+    "        df[\"Status\"] = \"L\"\n",
+    "        df[\"Entidade\"] = df.Entidade.str.strip()\n",
+    "        df[\"Fonte\"] = \"STEL\"\n",
+    "        df.loc[:, [\"Largura_Emissão(kHz)\", \"_\"]] = (\n",
+    "            df.Largura_Emissão.fillna(\"\").apply(self.parse_bw).tolist()\n",
+    "        )\n",
+    "        df.drop([\"Largura_Emissão\", \"_\"], axis=1, inplace=True)\n",
+    "        df.loc[:, \"Validade_RF\"] = df.Validade_RF.astype(\"string\").str.slice(0, 10)\n",
+    "        df[\"Frequência\"] = df[\"Frequência\"].astype(\"float\")\n",
+    "        df.loc[df.Unidade == \"kHz\", \"Frequência\"] = df.loc[\n",
+    "            df.Unidade == \"kHz\", \"Frequência\"\n",
+    "        ].apply(lambda x: float(Decimal(x) / Decimal(1000)))\n",
+    "        df.loc[df.Unidade == \"GHz\", \"Frequência\"] = df.loc[\n",
+    "            df.Unidade == \"GHz\", \"Frequência\"\n",
+    "        ].apply(lambda x: float(Decimal(x) * Decimal(1000)))\n",
+    "        df.drop(\"Unidade\", axis=1, inplace=True)\n",
+    "        df[\"Multiplicidade\"] = 1\n",
+    "        df[\"Log\"] = \"\"\n",
+    "        return df.loc[:, self.columns]"
    ]
   },
   {
@@ -975,34 +979,34 @@
    ],
    "source": [
     "#| export\n",
-    "if __name__ == '__main__':\n",
-    "\timport time\n",
+    "if __name__ == \"__main__\":\n",
+    "    import time\n",
     "\n",
-    "\tstart = time.perf_counter()\n",
+    "    start = time.perf_counter()\n",
     "\n",
-    "\tdata = Stel()\n",
+    "    data = Stel()\n",
     "\n",
-    "\tdata.update()\n",
+    "    data.update()\n",
     "\n",
-    "\tprint('STEL')\n",
+    "    print(\"STEL\")\n",
     "\n",
-    "\tdisplay(data.df)\n",
+    "    display(data.df)\n",
     "\n",
-    "\tdata.save()\n",
+    "    data.save()\n",
     "\n",
-    "\tprint(150 * '=')\n",
+    "    print(150 * \"=\")\n",
     "\n",
-    "\tdata = Radcom()\n",
+    "    data = Radcom()\n",
     "\n",
-    "\tdata.update()\n",
+    "    data.update()\n",
     "\n",
-    "\tprint('STEL')\n",
+    "    print(\"STEL\")\n",
     "\n",
-    "\tdisplay(data.df)\n",
+    "    display(data.df)\n",
     "\n",
-    "\tdata.save()\n",
+    "    data.save()\n",
     "\n",
-    "\tprint(f'Elapsed time: {time.perf_counter() - start} seconds')"
+    "    print(f\"Elapsed time: {time.perf_counter() - start} seconds\")"
    ]
   },
   {
