:fire: Cleaning repo to release new version

--- a/nbs/01a_connectors.ipynb
+++ b/nbs/01a_connectors.ipynb
@@ -50,6 +50,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classe Base a ser extendida"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -65,8 +72,22 @@
     "        # This method returns a list of n pyodbc connection objects in parallel\n",
     "        with ThreadPoolExecutor(max_workers=n) as executor:\n",
     "            futures = [executor.submit(self.connect) for _ in range(n)]\n",
-    "            return [future.result() for future in futures]\n",
-    "\n",
+    "            return [future.result() for future in futures]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SQL Server"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "@dataclass\n",
     "class SQLServer(DBConnector):\n",
@@ -93,7 +114,22 @@
     "            raise ConnectionError(\n",
     "                \"Não foi possível abrir uma conexão com o SQL Server. Esta conexão somente funciona da rede cabeada!\"\n",
     "            ) from e\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MongoDB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "@dataclass\n",
     "class MongoDB(DBConnector):\n",
