Testing extraction and inspecting data

--- a/nbs/01b_base.ipynb
+++ b/nbs/01b_base.ipynb
@@ -199,7 +199,7 @@
     "        if folder is None:\n",
     "            folder = self.folder\n",
     "        self._save(self.df, folder, self.stem)\n",
-    "        self._save(self.discarded, folder, f\"{self.stem}_discarded\")\n"
+    "        self._save(self.discarded, folder, f\"{self.stem}_discarded\")"
    ]
   }
  ],
