--- a/nbs/01a_connectors.ipynb
+++ b/nbs/01a_connectors.ipynb
@@ -72,7 +72,7 @@
     "        # This method returns a list of n pyodbc connection objects in parallel\n",
     "        with ThreadPoolExecutor(max_workers=n) as executor:\n",
     "            futures = [executor.submit(self.connect) for _ in range(n)]\n",
-    "            return [future.result() for future in futures]\n"
+    "            return [future.result() for future in futures]"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#| export\n",
     "@dataclass\n",
     "class SQLServer(DBConnector):\n",
     "    sql_params: dict\n",
@@ -113,8 +113,7 @@
     "        except pyodbc.OperationalError as e:\n",
     "            raise ConnectionError(\n",
     "                \"Não foi possível abrir uma conexão com o SQL Server. Esta conexão somente funciona da rede cabeada!\"\n",
-    "            ) from e\n",
-    "\n"
+    "            ) from e"
    ]
   },
   {
@@ -130,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#| export\n",
     "@dataclass\n",
     "class MongoDB(DBConnector):\n",
     "    mongo_uri: str\n",
